--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
+    "googleapis": "^148.0.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
